<resources>
    <string name="app_name">hangman</string>

    <string name="menu_newGame">New Game</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_quit">Quit</string>

    <string name="gamesPlayed">Games Started:</string>
    <string name="gamesWon">Games Won:</string>
    <string name="gamesLost">Games Lost:</string>

    <!--
    Settings for pref2
    -->
    <string name="language_key" translatable="false">languageKey</string>
    <string name="default_language" translatable="false">english</string>

    <string name="difficulty_key" translatable="false">difficultyKey</string>
    <string name="default_difficulty" translatable="false">easy</string>

    <string name="word_category_key" translatable="false">wordCategoriesKey</string>
    <string name="default_word_category" translatable="false">carbrands</string>
    <string name="settingLanguageTitle">Languages</string>
    <string name="settingLanguageSummary">Please select language in system settings</string>
    <string name="settingDifficultyTitle">Difficulty</string>
    <string name="settingDifficultySummary">Select a difficulty</string>
    <string name="settingCategoryTitle">Word Categories</string>
    <string name="settingCategorySummary">Press to show available categories</string>
    <string name="newGameAlert">Are you sure you want to start a new game?</string>
    <string name="negativeResponse">No</string>
    <string name="positiveResponse">Yes</string>
    <string name="lostAlert01">You lost! The word was</string>
    <string name="lostAlert02">Do you want to start a new game?</string>
    <string name="winAlert">You won! Do you want to start a new game?</string>
    <string name="alphabet">QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="menu_show_solution">Show solution</string>
    <string name="menu_reset_stats">Reset stats</string>
    <string name="about">This is my version of hangman.\n\n
        If you click a correct letter the solution will update with you letter of choice.
        If your letter is wrong the game will atempt to draw a hung man.\n\n
        Where the whole word is guessed the game is won. If the drawing of the hung man completes the game is lost.\n\n
        In the settings the word category and difficulty can be changed.
    </string>
    <!--
    END Settings for pref2
    -->
</resources>
